노트북 최종파일

--- a/templates/home.html
+++ b/templates/home.html
@@ -112,16 +112,16 @@
             <div class="col">
                 <div class="card">
                   <!-- content here -->
-                  <img src="static/img/word_cloud1.png" alt="" class="src">
+                  <img src="static/img/word_cloud.png" alt="" class="src">
                     <div class="card-body">
-                        <h5 class="card-title">Word Cloud</h5>
+                        <h5 class="card-title">인스타그램의 #다이어트식단과 관련된 키워드 <br> Word Cloud</h5>
                     </div>
                 </div>
             </div>
 
             <div class="col">
                 <div class="card">
-                  <img src="static/img/word_cloud2.png" alt="" class="src">
+                  <img src="static/img/graph.png" alt="" class="src">
                     <div class="card-body">
                         <h5 class="card-title">분석 그래프</h5>
                     </div>
